--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack-dev-server"
+    "build": "webpack-dev-server",
+    "deploy": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,14 +19,19 @@
   },
   "homepage": "https://github.com/mxviteri/fetchProject#readme",
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "eslint": "^4.6.1",
+    "react-search": "^2.0.5",
     "style-loader": "^0.18.2",
-    "webpack": "^3.5.5",
+    "webpack": "^3.5.6",
     "webpack-dev-server": "^2.7.1"
+  },
+  "devDependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
